Added JSON server and client in session-ms and message router

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -15,3 +15,7 @@ CONSUMER_GROUP_PERSISTENCE_MESSAGE=db-message
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_SESSION=session
 CONSUMER_GROUP_GATEWAY=gateway
+
+# SESSION MS OPTIONS
+SESSION_MS_HOST=127.0.0.1
+SESSION_MS_PORT=8001
