Added start command in gitpod.yml

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -8,7 +8,7 @@ TOPIC_DB_MESSAGE=db-message
 
 # KAFKA OPTIONS
 BROKER_LIST=localhost:9092
-
+ZOOKEEPER_ENDPOINT=localhost:2181
 
 # KAFKA CONSUMER GROUP
 CONSUMER_GROUP_PERSISTENCE_MESSAGE=db-message
