fixes runtime bugs

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -2,9 +2,13 @@
 TOPIC_USER_CONNECTED=user-connected
 TOPIC_USER_DISCONNECTED=user-disconnected
 TOPIC_MESSAGE_SENT=message-sent
+TOPIC_MESSAGE_SENT_FAILED=message-sent-failed
 TOPIC_MESSAGE_SENT_ERROR=message-sent-err
 TOPIC_NEW_MESSAGE=new-message
 TOPIC_DB_MESSAGE=db-message
+# CREATE TOPIC FOR NAMED SERVICE
+TOPIC_GATEWAY_MS_1=gateway-1
+TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
 
 # KAFKA OPTIONS
 BROKER_LIST=localhost:9092
