miscellaneous bug fixes

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -6,6 +6,8 @@ TOPIC_MESSAGE_SENT_FAILED=message-sent-failed
 TOPIC_MESSAGE_SENT_ERROR=message-sent-err
 TOPIC_NEW_MESSAGE=new-message
 TOPIC_DB_MESSAGE=db-message
+TOPIC_NEW_GROUP_MS=new-group-message
+
 # CREATE TOPIC FOR NAMED SERVICE
 TOPIC_GATEWAY_MS_1=gateway-1
 TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
@@ -19,7 +21,12 @@ CONSUMER_GROUP_PERSISTENCE_MESSAGE=db-message
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_SESSION=session
 CONSUMER_GROUP_GATEWAY=gateway
+CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
 
 # SESSION MS OPTIONS
 SESSION_MS_HOST=127.0.0.1
 SESSION_MS_PORT=8001
+
+# GROUP MS OPTIONS
+GROUP_MS_JSON_HOST=127.0.0.1
+GROUP_MS_JSON_PORT=8002
