--- a/.env.tmpl
+++ b/.env.tmpl
@@ -15,6 +15,9 @@ TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
 # KAFKA OPTIONS
 BROKER_LIST=localhost:9092
 ZOOKEEPER_ENDPOINT=localhost:2181
+KAFKA_SECURITY_PROTOCOL=
+KAFKA_SASL_USERNAME=
+KAFKA_SASL_PASSWORD=
 
 # KAFKA CONSUMER GROUP
 CONSUMER_GROUP_PERSISTENCE_MESSAGE=db-message
@@ -30,5 +33,10 @@ SESSION_MS_PORT=8001
 # GROUP MS OPTIONS
 GROUP_MS_JSON_HOST=127.0.0.1
 GROUP_MS_JSON_PORT=8002
+
+# MONGO URL
+MONGO_URL=mongodb://localhost:27017/chat
+MONGO_USER=
+MONGO_PASSWORD=
 
 FIREBASE_PROJECT_ID=
