Push notification support

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -7,10 +7,12 @@ TOPIC_MESSAGE_SENT_ERROR=message-sent-err
 TOPIC_NEW_MESSAGE=new-message
 TOPIC_DB_MESSAGE=db-message
 TOPIC_NEW_GROUP_MS=new-group-message
+TOPIC_NEW_LOGIN=new-login
 
 # CREATE TOPIC FOR NAMED SERVICE
 TOPIC_GATEWAY_MS_1=gateway-1
 TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
+PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
 
 # KAFKA OPTIONS
 BROKER_LIST=localhost:9092
@@ -40,3 +42,4 @@ MONGO_USER=
 MONGO_PASSWORD=
 
 FIREBASE_PROJECT_ID=
+FIREBASE_ADMIN_CRED_JSON_PATH=
