generate pre signed url for upload and download file

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -43,3 +43,8 @@ MONGO_PASSWORD=
 
 FIREBASE_PROJECT_ID=
 FIREBASE_ADMIN_CRED_JSON_PATH=
+
+# s3
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
