Updated to architecture v2.x

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -1,17 +1,13 @@
 # KAFKA TOPIC
-TOPIC_USER_CONNECTED=user-connected
-TOPIC_USER_DISCONNECTED=user-disconnected
-TOPIC_MESSAGE_SENT=message-sent
-TOPIC_MESSAGE_SENT_FAILED=message-sent-failed
-TOPIC_MESSAGE_SENT_ERROR=message-sent-err
+TOPIC_USER_CONNECTION_STATE=user-connection-state
+TOPIC_SEND_MESSAGE=send-message
 TOPIC_NEW_MESSAGE=new-message
-TOPIC_DB_MESSAGE=db-message
+TOPIC_OFFLINE_MESSAGE=offline-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
+TOPIC_ACK_MESSAGE=ack
 
 # CREATE TOPIC FOR NAMED SERVICE
-TOPIC_GATEWAY_MS_1=gateway-1
-TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
 
 # KAFKA OPTIONS
@@ -22,15 +18,10 @@ KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 
 # KAFKA CONSUMER GROUP
-CONSUMER_GROUP_PERSISTENCE_MESSAGE=db-message
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
-CONSUMER_GROUP_SESSION=session
+CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
-
-# SESSION MS OPTIONS
-SESSION_MS_HOST=127.0.0.1
-SESSION_MS_PORT=8001
 
 # GROUP MS OPTIONS
 GROUP_MS_JSON_HOST=127.0.0.1
@@ -48,3 +39,6 @@ FIREBASE_ADMIN_CRED_JSON_PATH=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
+
+# Service Discovery
+SERVICE_DISCOVERY_PATH=discovery_service.json
