fix: single chat request flow

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -1,16 +1,13 @@
 # KAFKA TOPIC
 TOPIC_USER_CONNECTED=user-connected
 TOPIC_USER_DISCONNECTED=user-disconnected
-TOPIC_MESSAGE_SENT=message-sent
-TOPIC_MESSAGE_SENT_FAILED=message-sent-failed
-TOPIC_MESSAGE_SENT_ERROR=message-sent-err
+TOPIC_SEND_MESSAGE=send-message
 TOPIC_NEW_MESSAGE=new-message
 TOPIC_DB_MESSAGE=db-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
 
 # CREATE TOPIC FOR NAMED SERVICE
-TOPIC_GATEWAY_MS_1=gateway-1
 TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
 
@@ -48,3 +45,6 @@ FIREBASE_ADMIN_CRED_JSON_PATH=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
+
+# Service Discovery
+SERVICE_DISCOVERY_PATH=
