implement arch v2.1 changes

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -5,9 +5,9 @@ TOPIC_NEW_MESSAGE=new-message
 TOPIC_OFFLINE_MESSAGE=offline-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
+TOPIC_ACK_MESSAGE=ack
 
 # CREATE TOPIC FOR NAMED SERVICE
-TOPIC_PERSISTENCE_MESSAGE_MS_1=persistence-message-1
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
 
 # KAFKA OPTIONS
@@ -18,15 +18,10 @@ KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 
 # KAFKA CONSUMER GROUP
-CONSUMER_GROUP_PERSISTENCE_MESSAGE=db-message
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
-CONSUMER_GROUP_SESSION=session
+CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
-
-# SESSION MS OPTIONS
-SESSION_MS_HOST=127.0.0.1
-SESSION_MS_PORT=8001
 
 # GROUP MS OPTIONS
 GROUP_MS_JSON_HOST=127.0.0.1
@@ -46,4 +41,4 @@ S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
 
 # Service Discovery
-SERVICE_DISCOVERY_PATH=
+SERVICE_DISCOVERY_PATH=discovery_service.json
