--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -1,3 +1,8 @@
+# Infra
+STAGE=dev
+CHAT_SERVER_TAG=v2.2.5
+CONFIG_DIR=./config
+
 # KAFKA TOPIC
 TOPIC_USER_CONNECTION_STATE=user-connection-state
 TOPIC_SEND_MESSAGE=send-message
@@ -32,19 +37,13 @@ MONGO_URL=mongodb://localhost:27017/chat
 MONGO_USER=
 MONGO_PASSWORD=
 
-# Redis
-REDIS_ENDPOINT=localhost:6379
-
-# Firebase
-FIREBASE_PROJECT_ID=vartalap-bef91
-FIREBASE_ADMIN_CRED_JSON_PATH=./deployment/config/firebase/service.json
+FIREBASE_PROJECT_ID=
+FIREBASE_ADMIN_CRED_JSON_PATH=
 
 # s3
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
 
-# Service Discovery
-SERVICE_DISCOVERY_PATH=./deployment/config/discovery_service/services.json
 
 
