rename topic arguments

--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -28,22 +28,19 @@ CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
 
-# GROUP MS OPTIONS
-GROUP_MS_JSON_HOST=127.0.0.1
-GROUP_MS_JSON_PORT=8002
 
 # MONGO URL
 MONGO_URL=mongodb://localhost:27017/chat
 MONGO_USER=
 MONGO_PASSWORD=
 
-FIREBASE_PROJECT_ID=
-FIREBASE_ADMIN_CRED_JSON_PATH=
+# Redis
+REDIS_ENDPOINT=localhost:6379
+
+# Firebase
+FIREBASE_PROJECT_ID=vartalap-bef91
 
 # s3
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
-
-
-
