message broker agnostic (#44)
* rename topic arguments to be agnostic to broker

* added eslint and husky pre commit rule

* upgrade dependencies

* ci: :construction_worker: Added github action to run linting on each commit

* migrated to common event store interface

* updated readme

--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -1,3 +1,8 @@
+# Infra
+STAGE=dev
+CHAT_SERVER_TAG=v2.2.6
+CONFIG_DIR=./config
+
 # KAFKA TOPIC
 TOPIC_USER_CONNECTION_STATE=user-connection-state
 TOPIC_SEND_MESSAGE=send-message
@@ -23,9 +28,6 @@ CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
 
-# GROUP MS OPTIONS
-GROUP_MS_JSON_HOST=127.0.0.1
-GROUP_MS_JSON_PORT=8002
 
 # MONGO URL
 MONGO_URL=mongodb://localhost:27017/chat
@@ -37,14 +39,8 @@ REDIS_ENDPOINT=localhost:6379
 
 # Firebase
 FIREBASE_PROJECT_ID=vartalap-bef91
-FIREBASE_ADMIN_CRED_JSON_PATH=./deployment/config/firebase/service.json
 
 # s3
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
-
-# Service Discovery
-SERVICE_DISCOVERY_PATH=./deployment/config/discovery_service/services.json
-
-
