fix: added env variable for kafka client id and consumer group

--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -15,6 +15,15 @@ TOPIC_ACK_MESSAGE=ack
 # CREATE TOPIC FOR NAMED SERVICE
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
 
+# KAKFA CLIENT ID
+GATEWAY_CLIENT_ID=gateway-1
+MESSAGE_DELIVERY_CLIENT_ID=message-delivery-1
+MESSAGE_ROUTER_CLIENT_ID=message-router-1
+PROFILE_CLIENT_ID=profile-1
+GROUP_CLIENT_ID=group-1
+GROUP_MESSAGE_ROUTER_CLIENT_ID=group-message-router-1
+NOTIFICATION_CLIENT_ID=notification-1
+
 # KAFKA OPTIONS
 BROKER_LIST=localhost:9092
 ZOOKEEPER_ENDPOINT=localhost:2181
@@ -27,7 +36,7 @@ CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
-
+CONSUMER_GROUP_NOTIFICATION=notification-ms
 
 # MONGO URL
 MONGO_URL=mongodb://localhost:27017/chat
