--- a/.env.tmpl
+++ b/.env.tmpl
@@ -50,9 +50,9 @@ FIREBASE_PROJECT_ID=vartalap-bef91
 FIREBASE_ADMIN_CRED_JSON_PATH=./deployment/config/firebase/service.json
 
 # s3
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
-S3_BUCKET_NAME=
+S3_ACCESS_KEY_ID=access_key
+S3_SECRET_ACCESS_KEY=secret_access_key
+S3_BUCKET_NAME=vartalap
 
 # Service Discovery
 SERVICE_DISCOVERY_PATH=./deployment/config/discovery_service/services.json
