migrated from ack-topic to system-topic

--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -10,7 +10,7 @@ TOPIC_NEW_MESSAGE=new-message
 TOPIC_OFFLINE_MESSAGE=offline-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
-TOPIC_ACK_MESSAGE=ack
+TOPIC_SYSTEM_MESSAGE=system-message
 
 # CREATE TOPIC FOR NAMED SERVICE
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
