fix: nats event store

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -57,4 +57,5 @@ S3_BUCKET_NAME=
 # Service Discovery
 SERVICE_DISCOVERY_PATH=./deployment/config/discovery_service/services.json
 
-
+# NATS
+NATS_SERVER_LIST=nats://127.0.0.1:4222
