--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -2,6 +2,7 @@
 STAGE=dev
 CHAT_SERVER_TAG=v2.2.6
 CONFIG_DIR=./config
+EVENT_STORE=kafka
 
 # KAFKA TOPIC
 TOPIC_USER_CONNECTION_STATE=user-connection-state
@@ -31,7 +32,7 @@ KAFKA_SECURITY_PROTOCOL=
 KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 
-# KAFKA CONSUMER GROUP
+# EVENT STORE CONSUMER GROUP
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
@@ -54,3 +55,12 @@ PN_TTL=3600
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
+
+# NATS
+NATS_SERVER_LIST=nats://127.0.0.1:4222
+NATS_AUTH=
+NATS_USER=
+NATS_PASS=
+NATS_AUTH_TOKEN=
+NATS_NKEY=
+NATS_USER_JWT=
