fix: added channel in message

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -45,6 +45,9 @@ MONGO_PASSWORD=
 # Redis
 REDIS_ENDPOINT=localhost:6379
 
+# Push Notification
+PN_SERVICE=mock
+
 # Firebase
 FIREBASE_PROJECT_ID=vartalap-bef91
 FIREBASE_ADMIN_CRED_JSON_PATH=./deployment/config/firebase/service.json
@@ -59,3 +62,6 @@ SERVICE_DISCOVERY_PATH=./deployment/config/discovery_service/services.json
 
 # NATS
 NATS_SERVER_LIST=nats://127.0.0.1:4222
+
+# AUTH Provider
+AUTH_PROVIDER=mock
