end to end test and fixes

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -10,6 +10,9 @@ TOPIC_SYSTEM_MESSAGE=system-message
 # CREATE TOPIC FOR NAMED SERVICE
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
 
+# EVENT STORE
+EVENT_STORE=nats
+
 # KAKFA CLIENT ID
 GATEWAY_CLIENT_ID=gateway-1
 MESSAGE_DELIVERY_CLIENT_ID=message-delivery-1
