--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -2,7 +2,6 @@
 STAGE=dev
 CHAT_SERVER_TAG=v2.2.6
 CONFIG_DIR=./config
-EVENT_STORE=kafka
 
 # KAFKA TOPIC
 TOPIC_USER_CONNECTION_STATE=user-connection-state
@@ -12,9 +11,13 @@ TOPIC_OFFLINE_MESSAGE=offline-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
 TOPIC_SYSTEM_MESSAGE=system-message
+TOPIC_CLIENT_ACK_MESSAGE=client-ack
 
 # CREATE TOPIC FOR NAMED SERVICE
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
+
+# EVENT STORE
+EVENT_STORE=nats
 
 # KAKFA CLIENT ID
 GATEWAY_CLIENT_ID=gateway-1
@@ -47,8 +50,11 @@ MONGO_PASSWORD=
 # Redis
 REDIS_ENDPOINT=localhost:6379
 
+# Push Notification
+PN_SERVICE=firebase
+
 # Firebase
-FIREBASE_PROJECT_ID=vartalap-bef91
+FIREBASE_PROJECT_ID=vartalap-dev
 PN_TTL=3600
 
 # s3
@@ -64,3 +70,6 @@ NATS_PASS=
 NATS_AUTH_TOKEN=
 NATS_NKEY=
 NATS_USER_JWT=
+
+# AUTH Provider
+AUTH_PROVIDER=firebase
