--- a/.env.tmpl
+++ b/.env.tmpl
@@ -6,6 +6,7 @@ TOPIC_OFFLINE_MESSAGE=offline-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
 TOPIC_SYSTEM_MESSAGE=system-message
+TOPIC_CLIENT_ACK_MESSAGE=client-ack
 
 # CREATE TOPIC FOR NAMED SERVICE
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
@@ -29,16 +30,12 @@ KAFKA_SECURITY_PROTOCOL=
 KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 
-# KAFKA CONSUMER GROUP
+# EVENT STORE CONSUMER GROUP
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
 CONSUMER_GROUP_NOTIFICATION=notification-ms
-
-# GROUP MS OPTIONS
-GROUP_MS_JSON_HOST=127.0.0.1
-GROUP_MS_JSON_PORT=8002
 
 # MONGO URL
 MONGO_URL=mongodb://localhost:27017/chat
@@ -52,7 +49,7 @@ REDIS_ENDPOINT=localhost:6379
 PN_SERVICE=mock
 
 # Firebase
-FIREBASE_PROJECT_ID=vartalap-bef91
+FIREBASE_PROJECT_ID=vartalap-dev
 FIREBASE_ADMIN_CRED_JSON_PATH=./deployment/config/firebase/service.json
 
 # s3
