Binary message support (#87)
*  protobuf message format
* server acks

--- a/.env.tmpl
+++ b/.env.tmpl
@@ -6,9 +6,13 @@ TOPIC_OFFLINE_MESSAGE=offline-message
 TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
 TOPIC_SYSTEM_MESSAGE=system-message
+TOPIC_CLIENT_ACK_MESSAGE=client-ack
 
 # CREATE TOPIC FOR NAMED SERVICE
 PERSISTENCE_MESSAGE_MS_INITIAL=persistence-message
+
+# EVENT STORE
+EVENT_STORE=nats
 
 # KAKFA CLIENT ID
 GATEWAY_CLIENT_ID=gateway-1
@@ -26,16 +30,12 @@ KAFKA_SECURITY_PROTOCOL=
 KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 
-# KAFKA CONSUMER GROUP
+# EVENT STORE CONSUMER GROUP
 CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
 CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
 CONSUMER_GROUP_NOTIFICATION=notification-ms
-
-# GROUP MS OPTIONS
-GROUP_MS_JSON_HOST=127.0.0.1
-GROUP_MS_JSON_PORT=8002
 
 # MONGO URL
 MONGO_URL=mongodb://localhost:27017/chat
@@ -45,8 +45,11 @@ MONGO_PASSWORD=
 # Redis
 REDIS_ENDPOINT=localhost:6379
 
+# Push Notification
+PN_SERVICE=mock
+
 # Firebase
-FIREBASE_PROJECT_ID=vartalap-bef91
+FIREBASE_PROJECT_ID=vartalap-dev
 FIREBASE_ADMIN_CRED_JSON_PATH=./deployment/config/firebase/service.json
 
 # s3
@@ -59,3 +62,6 @@ SERVICE_DISCOVERY_PATH=./deployment/config/discovery_service/services.json
 
 # NATS
 NATS_SERVER_LIST=nats://127.0.0.1:4222
+
+# AUTH Provider
+AUTH_PROVIDER=mock
