--- a/deployment/.env.tmpl
+++ b/deployment/.env.tmpl
@@ -1,16 +1,12 @@
 # Infra
 STAGE=dev
-CHAT_SERVER_TAG=v2.2.6
+CHAT_SERVER_TAG=v3.0.0-dev.2
 CONFIG_DIR=./config
 
 # KAFKA TOPIC
-TOPIC_USER_CONNECTION_STATE=user-connection-state
-TOPIC_SEND_MESSAGE=send-message
 TOPIC_NEW_MESSAGE=new-message
 TOPIC_OFFLINE_MESSAGE=offline-message
-TOPIC_NEW_GROUP_MS=new-group-message
 TOPIC_NEW_LOGIN=new-login
-TOPIC_SYSTEM_MESSAGE=system-message
 TOPIC_CLIENT_ACK_MESSAGE=client-ack
 
 # CREATE TOPIC FOR NAMED SERVICE
@@ -25,30 +21,27 @@ MESSAGE_DELIVERY_CLIENT_ID=message-delivery-1
 MESSAGE_ROUTER_CLIENT_ID=message-router-1
 PROFILE_CLIENT_ID=profile-1
 GROUP_CLIENT_ID=group-1
-GROUP_MESSAGE_ROUTER_CLIENT_ID=group-message-router-1
 NOTIFICATION_CLIENT_ID=notification-1
 
 # KAFKA OPTIONS
-BROKER_LIST=localhost:9092
-ZOOKEEPER_ENDPOINT=localhost:2181
+BROKER_LIST=kafka:9092
 KAFKA_SECURITY_PROTOCOL=
 KAFKA_SASL_USERNAME=
 KAFKA_SASL_PASSWORD=
 
 # EVENT STORE CONSUMER GROUP
-CONSUMER_GROUP_MESSAGE_ROUTER=message-router
 CONSUMER_GROUP_MESSAGE_DELIVERY=message-delivery
 CONSUMER_GROUP_GATEWAY=gateway
-CONSUMER_GROUP_GROUP_MESSAGE_ROUTER=group-message-router
 CONSUMER_GROUP_NOTIFICATION=notification-ms
+CONSUMER_GROUP_MESSAGE_STORAGE=message-storage
 
 # MONGO URL
-MONGO_URL=mongodb://localhost:27017/chat
-MONGO_USER=
-MONGO_PASSWORD=
+MONGO_URL=mongodb://mongo:27017/chat?authSource=admin
+MONGO_USER=root
+MONGO_PASSWORD=password
 
 # Redis
-REDIS_ENDPOINT=localhost:6379
+REDIS_ENDPOINT=redis:6379
 
 # Push Notification
 PN_SERVICE=firebase
@@ -63,7 +56,7 @@ S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
 
 # NATS
-NATS_SERVER_LIST=nats://127.0.0.1:4222
+NATS_SERVER_LIST=nats://nats:4222
 NATS_AUTH=
 NATS_USER=
 NATS_PASS=
